--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,45 @@
-index.ejs
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Drawill Dibujo colaborativo</title>
+	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
+	<style>
+		body{
+			background-color: #ababab;
+		}
+		#micanvas{
+			
+			margin: 0 auto;
+			background-color: white;
+		}
+	</style>
+</head>
+<body>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a href="/" class="navbar-brand">Drawill</a>
+				
+			</div>
+		</div>
+	</nav>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<h1>Drawill dibujo colaborativo</h1>
+			</div>
+
+		</div>
+		<div class="row">
+			<div class="col-lg-12 text-center" >
+				<canvas id="micanvas" height="400" width="800" > </canvas>
+			</div>
+		</div>
+	</div>
+	<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="/js/index.js"></script>
+</body>
+</html>
